[project]
name = "customagents"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Cheik Sana", email = "cofsana@gmail.com" }
]
dependencies = [
    "termcolor==2.4.0",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/customagents"]
